fix package scripts: add typecheck and lint commands
- adds typecheck via tsc --noEmit
- adds lint via pnpm exec eslint with .ts extension

--- a/packages/opencode-client/package.json
+++ b/packages/opencode-client/package.json
@@ -26,6 +26,8 @@
     "build": "tsc",
     "dev": "tsc --watch",
     "test": "pnpm build && ava",
+    "typecheck": "tsc --noEmit",
+    "lint": "pnpm exec eslint . --ext .ts",
     "test:unit": "pnpm build && ava",
     "test:watch": "ava --watch",
     "test:coverage": "c8 ava",
