add eslint configuration and update task file handling in kanban dire...
- add eslint support with tsconfig and file extensions
- update task file status to "open" and use proper type assertions
- fix test cases to use typed parameters and validate data structure
- improve error handling with null/undefined checks in backup and file operations
- update test context interface for better type safety and clarity

--- a/packages/opencode-client/tsconfig.json
+++ b/packages/opencode-client/tsconfig.json
@@ -5,7 +5,7 @@
     "rootDir": "./src"
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["dist", "node_modules", "src/tests-disabled"],
+  "exclude": ["dist", "node_modules", "src/tests-disabled", "pseudo"],
   "references": [
     {
       "path": "../persistence"
