--- a/packages/kanban/package.json
+++ b/packages/kanban/package.json
@@ -89,11 +89,11 @@
     "typedoc": "^0.28.13",
     "typedoc-plugin-markdown": "^4.9.0",
     "typescript": "^5.4.0",
-    "vitest": "^1.0.0"
+    "vitest": "^1.0.0",
+    "tempy": "^3.1.0"
   },
-"publishConfig": {
-  "access": "public",
-  "directory": "dist"
-}
-
+  "publishConfig": {
+    "access": "public",
+    "directory": "dist"
+  }
 }
