--- a/packages/pipelines/piper/package.json
+++ b/packages/pipelines/piper/package.json
@@ -2,6 +2,7 @@
   "name": "@promethean/piper",
   "version": "0.1.0",
   "type": "module",
+  "license": "GPL-3.0-only",
   "bin": {
     "piper": "bin/piper.js"
   },
