--- a/packages/kanban/package.json
+++ b/packages/kanban/package.json
@@ -90,7 +90,9 @@
     "tempy": "^3.1.0"
   },
   "publishConfig": {
-    "access": "public",
-    "directory": "dist"
-  }
+    "access": "public"
+  },
+  "files": [
+    "dist/**"
+  ]
 }
