fix: update kanban entry point to dist/cli.js
- change from bin/kanban.js to dist/cli.js in package.json
- indexer state updated to reflect current timestamp

--- a/packages/kanban/package.json
+++ b/packages/kanban/package.json
@@ -47,7 +47,7 @@
     }
   },
   "bin": {
-    "kanban": "bin/kanban.js"
+    "kanban": "dist/cli.js"
   },
   "scripts": {
     "build": "tsc -b tsconfig.json --force",
