--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build:affected": "node ./scripts/run-nx-task.mjs build affected",
     "build:selection": "node ./scripts/run-nx-task.mjs build selection",
     "build:tagged": "node ./scripts/run-nx-task.mjs build tagged",
-    "duck:web": "pnpm --filter @promethean/duck-web-frontend dev",
+    "duck:web": "pnpm --filter @promethean/frontend dev:duck-web",
     "duck:gateway": "pnpm --filter @promethean/enso-browser-gateway dev",
     "mcp:generate": "cd packages/clj-hacks && clojure -M:mcp-cli push-all --edn /home/err/devel/promethean/packages/mcp/config/mcp_servers.edn",
     "mcp:promethean": "cd packages/clj-hacks && clojure -M:mcp-cli push promethean.json /home/err/devel/promethean/promethean.mcp.json --edn /home/err/devel/promethean/packages/mcp/config/mcp_servers.edn",
@@ -109,23 +109,17 @@
     "@platformatic/mcp": "^1.2.2",
     "@promethean/autocommit": "workspace:*",
     "@promethean/buildfix": "workspace:*",
-    "@promethean/duck-web-frontend": "workspace:*",
+    "@promethean/frontend": "workspace:*",
     "@promethean/image-link-generator": "workspace:*",
     "@promethean/kanban": "workspace:*",
     "@promethean/legacy": "workspace:*",
     "@promethean/level-cache": "workspace:*",
     "@promethean/markdown": "workspace:*",
-    "@promethean/mcp-dev-ui-frontend": "workspace:*",
-    "@promethean/openai-server-frontend": "workspace:*",
     "@promethean/opencode-client": "workspace:*",
-    "@promethean/opencode-session-manager-frontend": "workspace:*",
     "@promethean/persistence": "workspace:*",
     "@promethean/piper": "workspace:*",
-    "@promethean/piper-frontend": "workspace:*",
     "@promethean/pm2-helpers": "workspace:*",
-    "@promethean/report-forge-frontend": "workspace:*",
     "@promethean/shadow-conf": "workspace:*",
-    "@promethean/smartgpt-dashboard-frontend": "workspace:*",
     "@promethean/utils": "workspace:*",
     "@xenova/transformers": "2.17.2",
     "ava": "6.4.1",
