--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -100,6 +100,7 @@
     "@promethean/utils": "workspace:*",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "vite": "^5.0.0",
     "scheduler": "^0.27.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -126,7 +127,6 @@
   },
   "devDependencies": {
     "@promethean/test-utils": "workspace:*",
-    "@promethean/database": "workspace:*",
     "@promethean/opencode-client": "workspace:*",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
@@ -166,7 +166,6 @@
       "src"
     ],
     "dependencies": {
-      "@promethean/database": "workspace:*",
       "@promethean/opencode-client": "workspace:*"
     }
   },
