--- a/packages/opencode-client/tsconfig.json
+++ b/packages/opencode-client/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "../../config/tsconfig.base.json",
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "composite": true
   },
   "include": ["src/**/*.ts"],
   "exclude": ["dist", "node_modules", "src/tests-disabled", "pseudo"],
