--- a/packages/pipelines/docops/package.json
+++ b/packages/pipelines/docops/package.json
@@ -17,7 +17,7 @@
     "@fastify/rate-limit": "^10.3.0",
     "@fastify/static": "^8.2.0",
     "@fastify/websocket": "^11.2.0",
-    "@promethean/docops-frontend": "workspace:*",
+    "@promethean/frontend": "workspace:*",
     "@promethean/file-indexer-service": "workspace:*",
     "@promethean/fs": "workspace:*",
     "@promethean/markdown": "workspace:*",
