--- a/package.json
+++ b/package.json
@@ -162,6 +162,7 @@
     "eslint-plugin-functional": "9.0.2",
     "eslint-plugin-import": "2.32.0",
     "eslint-plugin-promise": "7.2.1",
+    "eslint-plugin-sonarjs": "^3.0.5",
     "globby": "^15.0.0",
     "jiti": "2.5.1",
     "node-gyp": "11.4.2",
