--- a/packages/web-utils/package.json
+++ b/packages/web-utils/package.json
@@ -28,10 +28,11 @@
   },
   "module": "dist/index.js",
   "dependencies": {
-    "cheerio": "1.0.0-rc.12",
-    "zod": "3.23.8",
+    "@promethean/fs": "workspace:*",
     "@xenova/transformers": "2.17.2",
-    "@promethean/fs": "workspace:*"
+    "cheerio": "1.0.0-rc.12",
+    "type-fest": "^5.1.0",
+    "zod": "3.23.8"
   },
   "devDependencies": {
     "fastify": "5.3.2"
