add .#pnpm-workspace.yaml and ignore pseudo/ directory
- introduce stealth config file for err package
- prevent pseudo directory from being included in workspace builds
- maintain compatibility with existing pnpm workspace setup

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -12,6 +12,7 @@ ignore:
   - packages/buildfix/test-fixtures
   - packages/buildfix/simple-fixtures
   - packages/buildfix/test-tmp
+  - pseudo/
 
 pnpm:
   overrides:
