--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -12,7 +12,7 @@ ignore:
   - packages/buildfix/test-fixtures
   - packages/buildfix/simple-fixtures
   - packages/buildfix/test-tmp
-  - pseudo/
+  - pseudo/*
 
 pnpm:
   overrides:
