--- a/packages/ai/openai-server/project.json
+++ b/packages/ai/openai-server/project.json
@@ -1,13 +1,13 @@
 {
   "name": "@promethean/openai-server",
-  "root": "packages/openai-server",
-  "sourceRoot": "packages/openai-server/src",
+  "root": "packages/ai/openai-server",
+  "sourceRoot": "packages/ai/openai-server/src",
   "targets": {
     "build": {
       "executor": "nx:run-commands",
       "options": {
         "command": "pnpm run build",
-        "cwd": "packages/openai-server"
+        "cwd": "packages/ai/openai-server"
       },
       "outputs": ["{projectRoot}/dist"]
     },
@@ -15,7 +15,7 @@
       "executor": "nx:run-commands",
       "options": {
         "command": "pnpm run typecheck",
-        "cwd": "packages/openai-server"
+        "cwd": "packages/ai/openai-server"
       }
     },
     "test": {
@@ -32,7 +32,7 @@
       "executor": "nx:run-commands",
       "options": {
         "command": "pnpm run lint",
-        "cwd": "packages/openai-server"
+        "cwd": "packages/ai/openai-server"
       }
     }
   },
