--- a/packages/agents/agent/project.json
+++ b/packages/agents/agent/project.json
@@ -1,13 +1,13 @@
 {
     "name": "@promethean/agent",
-    "root": "packages/agent",
-    "sourceRoot": "packages/agent/src",
+    "root": "packages/agents/agent",
+    "sourceRoot": "packages/agents/agent/src",
     "targets": {
         "build": {
             "executor": "nx:run-commands",
             "options": {
                 "command": "tsc -b",
-                "cwd": "packages/agent"
+                "cwd": "packages/agents/agent"
             },
             "outputs": ["{projectRoot}/dist"]
         },
@@ -15,7 +15,7 @@
             "executor": "nx:run-commands",
             "options": {
                 "command": "tsc -p tsconfig.json --noEmit",
-                "cwd": "packages/agent"
+                "cwd": "packages/agents/agent"
             }
         },
         "test": {
@@ -33,7 +33,7 @@
             "executor": "nx:run-commands",
             "options": {
                 "command": "eslint .",
-                "cwd": "packages/agent"
+                "cwd": "packages/agents/agent"
             }
         }
     },
