--- a/packages/file-system/file-watcher/project.json
+++ b/packages/file-system/file-watcher/project.json
@@ -1,13 +1,13 @@
 {
   "name": "@promethean/file-watcher",
-  "root": "packages/file-watcher",
-  "sourceRoot": "packages/file-watcher/src",
+  "root": "packages/file-system/file-watcher",
+  "sourceRoot": "packages/file-system/file-watcher/src",
   "targets": {
     "build": {
       "executor": "nx:run-commands",
       "options": {
         "command": "tsc -b",
-        "cwd": "packages/file-watcher"
+        "cwd": "packages/file-system/file-watcher"
       },
       "outputs": ["{projectRoot}/dist"]
     },
@@ -15,7 +15,7 @@
       "executor": "nx:run-commands",
       "options": {
         "command": "tsc -p tsconfig.json --noEmit",
-        "cwd": "packages/file-watcher"
+        "cwd": "packages/file-system/file-watcher"
       }
     },
     "test": {
@@ -32,7 +32,7 @@
       "executor": "nx:run-commands",
       "options": {
         "command": "eslint .",
-        "cwd": "packages/file-watcher"
+        "cwd": "packages/file-system/file-watcher"
       }
     }
   },
