--- a/packages/pipelines/codemods/project.json
+++ b/packages/pipelines/codemods/project.json
@@ -1,13 +1,13 @@
 {
   "name": "@promethean/codemods",
-  "root": "packages/codemods",
-  "sourceRoot": "packages/codemods/src",
+  "root": "packages/pipelines/codemods",
+  "sourceRoot": "packages/pipelines/codemods/src",
   "targets": {
     "build": {
       "executor": "nx:run-commands",
       "options": {
         "command": "tsc -b",
-        "cwd": "packages/codemods"
+        "cwd": "packages/pipelines/codemods"
       },
       "outputs": ["{projectRoot}/dist"]
     },
@@ -15,7 +15,7 @@
       "executor": "nx:run-commands",
       "options": {
         "command": "tsc -p tsconfig.json --noEmit",
-        "cwd": "packages/codemods"
+        "cwd": "packages/pipelines/codemods"
       }
     },
     "test": {
@@ -32,7 +32,7 @@
       "executor": "nx:run-commands",
       "options": {
         "command": "eslint .",
-        "cwd": "packages/codemods"
+        "cwd": "packages/pipelines/codemods"
       }
     }
   },
