--- a/packages/pipelines/docops/project.json
+++ b/packages/pipelines/docops/project.json
@@ -1,13 +1,13 @@
 {
   "name": "@promethean/docops",
-  "root": "packages/docops",
-  "sourceRoot": "packages/docops/src",
+  "root": "packages/pipelines/docops",
+  "sourceRoot": "packages/pipelines/docops/src",
   "targets": {
     "build": {
       "executor": "nx:run-commands",
       "options": {
         "command": "tsc -b",
-        "cwd": "packages/docops"
+        "cwd": "packages/pipelines/docops"
       },
       "outputs": ["{projectRoot}/dist"]
     },
@@ -15,7 +15,7 @@
       "executor": "nx:run-commands",
       "options": {
         "command": "tsc -p tsconfig.json --noEmit",
-        "cwd": "packages/docops"
+        "cwd": "packages/pipelines/docops"
       }
     },
     "test": {
@@ -32,7 +32,7 @@
       "executor": "nx:run-commands",
       "options": {
         "command": "eslint .",
-        "cwd": "packages/docops"
+        "cwd": "packages/pipelines/docops"
       }
     }
   },
