--- a/pseudo/alias-rewrite/project.json
+++ b/pseudo/alias-rewrite/project.json
@@ -1,13 +1,13 @@
 {
   "name": "@promethean/alias-rewrite",
-  "root": "packages/alias-rewrite",
-  "sourceRoot": "packages/alias-rewrite/src",
+  "root": "pseudo/alias-rewrite",
+  "sourceRoot": "pseudo/alias-rewrite/src",
   "targets": {
     "build": {
       "executor": "nx:run-commands",
       "options": {
         "command": "tsc -b --force",
-        "cwd": "packages/alias-rewrite"
+        "cwd": "pseudo/alias-rewrite"
       },
       "outputs": ["{projectRoot}/dist"]
     },
@@ -15,7 +15,7 @@
       "executor": "nx:run-commands",
       "options": {
         "command": "tsc -p tsconfig.json --noEmit",
-        "cwd": "packages/alias-rewrite"
+        "cwd": "pseudo/alias-rewrite"
       }
     },
     "test": {
@@ -32,7 +32,7 @@
       "executor": "nx:run-commands",
       "options": {
         "command": "eslint .",
-        "cwd": "packages/alias-rewrite"
+        "cwd": "pseudo/alias-rewrite"
       }
     }
   },
