--- a/pseudo/contracts/project.json
+++ b/pseudo/contracts/project.json
@@ -1,13 +1,13 @@
 {
     "name": "@promethean/contracts",
-    "root": "packages/contracts",
-    "sourceRoot": "packages/contracts/src",
+    "root": "pseudo/contracts",
+    "sourceRoot": "pseudo/contracts/src",
     "targets": {
         "build": {
             "executor": "nx:run-commands",
             "options": {
                 "command": "tsc -b",
-                "cwd": "packages/contracts"
+                "cwd": "pseudo/contracts"
             },
             "outputs": ["{projectRoot}/dist"]
         },
@@ -15,7 +15,7 @@
             "executor": "nx:run-commands",
             "options": {
                 "command": "tsc -p tsconfig.json --noEmit",
-                "cwd": "packages/contracts"
+                "cwd": "pseudo/contracts"
             }
         },
         "test": {
@@ -32,7 +32,7 @@
             "executor": "nx:run-commands",
             "options": {
                 "command": "eslint .",
-                "cwd": "packages/contracts"
+                "cwd": "pseudo/contracts"
             }
         }
     },
