--- a/pseudo/indexer-core/project.json
+++ b/pseudo/indexer-core/project.json
@@ -1,12 +1,12 @@
 {
   "name": "@promethean/indexer-core",
-  "root": "packages/indexer-core",
+  "root": "pseudo/indexer-core",
   "targets": {
     "build": {
       "executor": "nx:run-commands",
       "options": {
         "command": "pnpm run build",
-        "cwd": "packages/indexer-core"
+        "cwd": "pseudo/indexer-core"
       },
       "outputs": ["{projectRoot}/dist"]
     },
@@ -14,25 +14,25 @@
       "executor": "nx:run-commands",
       "options": {
         "command": "pnpm run typecheck",
-        "cwd": "packages/indexer-core"
+        "cwd": "pseudo/indexer-core"
       }
     },
     "test": {
       "executor": "nx:run-commands",
       "options": {
         "command": "pnpm run test",
-        "cwd": "packages/indexer-core"
+        "cwd": "pseudo/indexer-core"
       }
     },
     "lint": {
       "executor": "nx:run-commands",
       "options": {
         "command": "pnpm run lint",
-        "cwd": "packages/indexer-core",
+        "cwd": "pseudo/indexer-core",
         "forwardAllArgs": false
       }
     }
   },
   "tags": ["scope:packages"],
-  "sourceRoot": "packages/indexer-core/src"
+  "sourceRoot": "pseudo/indexer-core/src"
 }
