--- a/pseudo/markdown-graph/project.json
+++ b/pseudo/markdown-graph/project.json
@@ -1,13 +1,13 @@
 {
   "name": "@promethean/markdown-graph",
-  "root": "packages/markdown-graph",
-  "sourceRoot": "packages/markdown-graph/src",
+  "root": "pseudo/markdown-graph",
+  "sourceRoot": "pseudo/markdown-graph/src",
   "targets": {
     "build": {
       "executor": "nx:run-commands",
       "options": {
         "command": "tsc -b",
-        "cwd": "packages/markdown-graph"
+        "cwd": "pseudo/markdown-graph"
       },
       "outputs": ["{projectRoot}/dist"]
     },
@@ -15,7 +15,7 @@
       "executor": "nx:run-commands",
       "options": {
         "command": "tsc -p tsconfig.json --noEmit",
-        "cwd": "packages/markdown-graph"
+        "cwd": "pseudo/markdown-graph"
       }
     },
     "test": {
@@ -29,7 +29,7 @@
       "executor": "nx:run-commands",
       "options": {
         "command": "eslint .",
-        "cwd": "packages/markdown-graph"
+        "cwd": "pseudo/markdown-graph"
       }
     }
   },
