--- a/pseudo/schema/project.json
+++ b/pseudo/schema/project.json
@@ -1,13 +1,13 @@
 {
     "name": "@promethean/schema",
-    "root": "packages/schema",
-    "sourceRoot": "packages/schema/src",
+    "root": "pseudo/schema",
+    "sourceRoot": "pseudo/schema/src",
     "targets": {
         "build": {
             "executor": "nx:run-commands",
             "options": {
                 "command": "tsc -b",
-                "cwd": "packages/schema"
+                "cwd": "pseudo/schema"
             },
             "outputs": ["{projectRoot}/dist"]
         },
@@ -15,7 +15,7 @@
             "executor": "nx:run-commands",
             "options": {
                 "command": "tsc -p tsconfig.json --noEmit",
-                "cwd": "packages/schema"
+                "cwd": "pseudo/schema"
             }
         },
         "test": {
@@ -32,7 +32,7 @@
             "executor": "nx:run-commands",
             "options": {
                 "command": "eslint .",
-                "cwd": "packages/schema"
+                "cwd": "pseudo/schema"
             }
         }
     },
