feat: update 13 file(s) [auto]
- packages/kanban/src/board/event-log.ts
- packages/kanban/src/board/event-log/event-creator.ts
- packages/kanban/src/board/event-log/file-operations.ts
- packages/kanban/src/board/event-log/index.ts
- packages/kanban/src/board/event-log/stats.ts
- packages/kanban/src/board/event-log/task-history.ts
- packages/kanban/src/board/event-log/types.ts
- packages/kanban/src/lib/wip-enforcement.ts
- packages/persistence/src/dualStore.ts
- packages/persistence/src/dualStoreHelpers.ts
- …

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "allowArbitraryExtensions": false,
     "allowImportingTsExtensions": false,
     "declaration": true,
+    "noImplicitAny": true,
     "declarationMap": true,
     "importHelpers": false,
     "newLine": "lf",
