fix kanban column underscore normalization bug
- Implemented consistent underscore normalization in column names across CLI commands and board generation
- Verified consistent column name handling in frontend and backend
- Updated test data with new user and activity records
- Added security validation for path injection patterns
- Improved documentation with completed task status and test coverage notes

--- a/packages/platform-core/package.json
+++ b/packages/platform-core/package.json
@@ -17,9 +17,7 @@
     "lint": "eslint src --ext .ts",
     "dev": "tsc --watch"
   },
-  "dependencies": {
-    "@promethean/core": "workspace:*"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/node": "^20.0.0",
     "ava": "^6.0.0",
