--- a/packages/platform-core/tsconfig.json
+++ b/packages/platform-core/tsconfig.json
@@ -29,10 +29,5 @@
     "noEmit": false
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "tests"],
-  "references": [
-    {
-      "path": "../core"
-    }
-  ]
+  "exclude": ["node_modules", "dist", "tests"]
 }
