--- a/packages/persistence/tsconfig.json
+++ b/packages/persistence/tsconfig.json
@@ -7,6 +7,7 @@
         "declaration": true
     },
     "include": ["src/**/*"],
+    "exclude": ["src/dualStoreFunctions.ts", "src/tests/**/*"],
     "references": [
         {
             "path": "../ai/embedding"
