fix indexer state and test command update
- updated lastIndexedMessageId and savedAt timestamps in indexer-state.json
- changed test script to use build:tests instead of build for better test isolation

--- a/packages/opencode-client/package.json
+++ b/packages/opencode-client/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
-    "test": "pnpm build && ava",
+    "test": "pnpm build:tests && ava",
     "typecheck": "tsc --noEmit",
     "lint": "pnpm exec eslint . --ext .ts",
     "test:unit": "pnpm build && ava",
