--- a/packages/opencode-client/package.json
+++ b/packages/opencode-client/package.json
@@ -23,11 +23,12 @@
   },
   "scripts": {
     "build": "tsc",
+    "build:tests": "tsc --project tsconfig.test.json",
     "dev": "tsc --watch",
     "test": "pnpm build:tests && ava",
     "typecheck": "tsc --noEmit",
     "lint": "pnpm exec eslint . --ext .ts",
-    "test:unit": "pnpm build && ava",
+    "test:unit": "pnpm build:tests && ava",
     "test:watch": "ava --watch",
     "test:coverage": "c8 ava",
     "start": "node dist/cli.js"
