--- a/packages/persistence/package.json
+++ b/packages/persistence/package.json
@@ -19,9 +19,10 @@
     ],
     "scripts": {
         "build": "tsc",
+        "build:tests": "tsc -p tsconfig.test.json",
         "clean": "rimraf dist",
         "typecheck": "tsc -p tsconfig.json --noEmit",
-        "test": "pnpm run build && ava --config ../../config/ava.config.mjs",
+        "test": "pnpm run build:tests && ava --config ../../config/ava.config.mjs",
         "lint": "pnpm exec eslint .",
         "lisp": "node dist/cli/lisp.js",
         "coverage": "pnpm run build && c8 ava --config ../../config/ava.config.mjs",
