--- a/packages/persistence/package.json
+++ b/packages/persistence/package.json
@@ -59,6 +59,7 @@
         "zod": "^3.23.8"
     },
     "devDependencies": {
+        "@stryker-mutator/tap-runner": "^9.2.0",
         "@types/body-parser": "^1.19.5",
         "@types/estree": "^1.0.5",
         "@types/express": "^4.17.21",
