add .stryker-tmp to .gitignore and configure stryker with pnpm and tap
- initialize stryker with pnpm and tap test runner
- enable per-test coverage analysis
- generate html, clear-text, and progress reporters

--- a/.gitignore
+++ b/.gitignore
@@ -153,3 +153,6 @@ packages/kanban/kanban-test-*/
 # Temporary test directories
 **/kanban-test-*/
 **/test-tmp/
+
+# stryker temp files
+.stryker-tmp
