--- a/package.json
+++ b/package.json
@@ -153,6 +153,7 @@
     "@playwright/mcp": "0.0.42",
     "@playwright/test": "1.56.0",
     "@promethean/test-utils": "workspace:*",
+    "@stryker-mutator/tap-runner": "^9.2.0",
     "@types/mongodb": "4.0.6",
     "@types/node": "20.19.11",
     "@typescript-eslint/eslint-plugin": "8.42.0",
