add @diogovcs/stryker-mutator@0.2.7 for mutation testing
- introduces AI-powered mutation testing via stryker-mutator
- requires @nrwl/devkit@19.8.4 and nx@20.0.0 for compatibility
- updates package.json and pnpm-lock.yaml with new dependency

--- a/package.json
+++ b/package.json
@@ -148,6 +148,7 @@
     "zod": "3.25.76"
   },
   "devDependencies": {
+    "@diogovcs/stryker-mutator": "^0.2.7",
     "@nx/devkit": "21.4.1",
     "@nx/node": "^21.6.4",
     "@playwright/mcp": "0.0.42",
