--- a/package.json
+++ b/package.json
@@ -187,5 +187,12 @@
   },
   "engines": {
     "node": "22.20.0"
-  }
+  },
+  "workspaces": [
+    "packages/*",
+    "packages/*/*",
+    ".opencode/*",
+    "scripts/*/*",
+    "tools/"
+  ]
 }
