--- a/packages/scar/package.json
+++ b/packages/scar/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@types/glob": "^9.0.0",
     "chalk": "^5.3.0",
+    "commander": "^11.1.0",
     "fs-extra": "^11.1.1",
     "glob": "^10.4.5",
     "yaml": "^2.3.4",
