fix indexer state and add missing types and healers
- update lastIndexedMessageId and savedAt in indexer-state.json
- add @types/commander to package.json
- create core and CLI exports in src/index.ts
- add tests for corruption detector and healers strategies
- update pnpm-lock.yaml with commander and @types/commander versions

--- a/packages/scar/package.json
+++ b/packages/scar/package.json
@@ -32,6 +32,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/commander": "^2.12.2",
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^20.10.0",
     "ava": "^6.0.0",
