--- a/packages/scar/tsconfig.json
+++ b/packages/scar/tsconfig.json
@@ -8,5 +8,5 @@
     "sourceMap": true
   },
   "include": ["src/**/*"],
-  "exclude": ["dist", "node_modules", "**/*.test.ts"]
+  "exclude": ["dist", "node_modules"]
 }
