chore: update indexer state and publish config
- update lastIndexedMessageId and savedAt in indexer-state.json
- set publishConfig to public in package.json
- update import path in test-indexer.js to use dist directory

--- a/packages/opencode-client/package.json
+++ b/packages/opencode-client/package.json
@@ -4,6 +4,9 @@
   "description": "CLI client for OpenCode plugins and tools",
   "type": "module",
   "main": "dist/index.js",
+  "publishConfig": {
+    "access": "public"
+  },
   "exports": {
     ".": {
       "import": "./dist/index.js",
