--- a/packages/autocommit/package.json
+++ b/packages/autocommit/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "type": "module",
   "license": "GPL-3.0-or-later",
+  "publishConfig": {
+    "access": "public"
+  },
   "bin": {
     "autocommit": "./dist/cli.js"
   },
