fix indexer state and silence console output in tests
- update lastIndexedMessageId and savedAt in indexer-state.json
- silence console output during tests by overriding console methods
- enable test-specific environment via NODE_ENV=test in package.json test script

--- a/packages/opencode-client/package.json
+++ b/packages/opencode-client/package.json
@@ -28,7 +28,7 @@
     "build": "tsc",
     "build:tests": "tsc --project tsconfig.test.json",
     "dev": "tsc --watch",
-    "test": "pnpm build:tests && ava",
+    "test": "pnpm build:tests && NODE_ENV=test ava",
     "typecheck": "tsc --noEmit",
     "lint": "pnpm exec eslint . --ext .ts",
     "test:unit": "pnpm build:tests && ava",
