--- a/packages/opencode-client/tsconfig.json
+++ b/packages/opencode-client/tsconfig.json
@@ -6,7 +6,7 @@
     "composite": true
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["dist", "node_modules", "src/tests-disabled", "pseudo"],
+  "exclude": ["dist", "node_modules", "src/tests-disabled", "src/tests", "pseudo"],
   "references": [
     {
       "path": "../persistence"
