--- a/tools/package.json
+++ b/tools/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@promethean/tools",
+  "name": "@promethean-os/tools",
   "version": "0.0.0",
   "type": "module",
   "main": "index.js",
