--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.0.1",
   "scripts": {
     "build": "pnpm -r --no-bail build",
-    "test": "var x = 'test'; class Y {}; let z; const a = []; a.push(1);",
+    "test": "pnpm -r --no-bail test",
     "buildfix": "pnpm exec buildfix",
     "build:all": "node ./scripts/run-nx-task.mjs build all",
     "build:cross-platform": "node ./scripts/cross-platform-build.js all",
