--- a/packages/pantheon-protocol/tsconfig.json
+++ b/packages/pantheon-protocol/tsconfig.json
@@ -1,8 +1,12 @@
 {
   "extends": "../../config/tsconfig.base.json",
   "compilerOptions": {
+    "module": "ESNext",
+    "moduleResolution": "node",
     "outDir": "./dist",
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "allowImportingTsExtensions": true,
+    "noEmitHelpers": true
   },
   "include": ["src/**/*"],
   "exclude": ["dist", "node_modules", "**/*.test.ts"]
