docs: add comprehensive documentation status and structure overview f...
- Complete documentation status by category and feature coverage
- Detailed structure with navigation paths and learning paths
- Clear separation of core, integration, and UI components
- Real-world usage examples and architecture diagrams
- Versioned and updated metadata with last modified date

--- a/packages/kanban/package.json
+++ b/packages/kanban/package.json
@@ -61,7 +61,8 @@
     "@promethean-os/lmdb-cache": "workspace:*",
     "@promethean-os/markdown": "workspace:*",
     "@promethean-os/utils": "workspace:*",
-    "@promethean-os/agents-workflow": "workspace:*",
+    "@promethean-os/pantheon": "workspace:*",
+    "@promethean-os/pantheon-core": "workspace:*",
     "chokidar": "^4.0.1",
     "globby": "^14.0.2",
     "gray-matter": "^4.0.3",
