--- a/packages/kanban/package.json
+++ b/packages/kanban/package.json
@@ -71,7 +71,9 @@
     "ws": "^8.18.0",
     "xml2js": "^0.6.2",
     "js-yaml": "^4.1.0",
-    "yaml": "^2.5.0"
+    "yaml": "^2.5.0",
+    "zod": "^3.22.4",
+    "commander": "^12.0.0"
   },
   "devDependencies": {
     "@cljs-oss/module-deps": "^1.1.1",
@@ -79,6 +81,7 @@
     "@types/js-yaml": "^4.0.5",
     "@types/ws": "^8.5.0",
     "@types/xml2js": "^0.4.11",
+    "@types/commander": "^2.12.2",
     "esmock": "^2.7.3",
     "garden": "^0.52.0",
     "react": "^18.2.0",
