--- a/packages/event-hooks-plugin/package.json
+++ b/packages/event-hooks-plugin/package.json
@@ -38,7 +38,9 @@
   "license": "GPL-3.0-only",
   "dependencies": {
     "@promethean-os/logger": "workspace:*",
-    "@promethean-os/persistence": "workspace:*",
+    "@promethean-os/persistence": "workspace:*"
+  },
+  "peerDependencies": {
     "@promethean-os/opencode-client": "workspace:*"
   },
   "devDependencies": {
