--- a/packages/kanban/package.json
+++ b/packages/kanban/package.json
@@ -67,6 +67,7 @@
     "globby": "^14.0.2",
     "gray-matter": "^4.0.3",
     "mongodb": "^6.18.0",
+    "nbb": "^1.3.204",
     "simple-git": "^3.27.0",
     "ws": "^8.18.0",
     "xml2js": "^0.6.2",
