add chroma write queue and semantic store architecture with driver-ba...
- Introduces Chroma Write Queue to batch writes and reduce connection errors with exponential backoff and retry logic
- Implements driver-based Semantic Store architecture with unified API, supporting MongoDB, ChromaDB, and in-memory backends
- Maintains backward compatibility via DualStoreManager alias and identical API surface
- Enables environment-driven configuration and testing with in-memory drivers
- Adds monitoring, error handling, and performance metrics for observability and reliability

--- a/packages/ai/openai-server/package.json
+++ b/packages/ai/openai-server/package.json
@@ -23,7 +23,7 @@
     "build": "pnpm run clean && tsc -b",
     "clean": "rimraf dist tsconfig.tsbuildinfo",
     "typecheck": "tsc -p tsconfig.json --noEmit",
-    "test": "pnpm run build && ava",
+    "test": "pnpm run build && tsc src/tests/**/*.ts --outDir dist/tests --moduleResolution node16 --module Node16 --target esnext --skipLibCheck && ava",
     "lint": "pnpm exec eslint ."
   },
   "dependencies": {
