remove physics simulation and fallback to hash embeddings in Eidolon ...
- Eliminate dependency on @promethean-os/eidolon-field package
- Replace vector physics with simple dimensionality reduction using hash-based embeddings
- Simplify field evolution by removing dynamic field simulation and decay mechanics
- Update attractor updates to use embedding vectors directly for cluster membership and confidence calculation

--- a/packages/ai/ai-learning/package.json
+++ b/packages/ai/ai-learning/package.json
@@ -25,7 +25,8 @@
   "license": "GPL-3.0-only",
   "dependencies": {
     "@promethean-os/utils": "workspace:*",
-    "@promethean-os/eidolon-field": "workspace:*"
+    "@promethean-os/eidolon-field": "workspace:*",
+    "@promethean-os/ollama-queue": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
