--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -61,27 +61,17 @@
     "static"
   ],
   "scripts": {
-    "build": "pnpm run build:all",
-    "build:all": "pnpm run build:shadow && pnpm run build:ts",
-    "build:shadow": "shadow-cljs release all",
+    "build": "pnpm run build:shadow && pnpm run build:ts",
+    "build:shadow": "shadow-cljs release main",
     "build:ts": "tsc",
-    "watch": "pnpm run watch:shadow",
-    "watch:shadow": "shadow-cljs watch all",
+    "dev": "shadow-cljs watch main",
+    "watch": "shadow-cljs watch main",
     "clean": "rimraf dist dist/frontend",
     "typecheck": "tsc -p tsconfig.json",
     "test": "pnpm run build && ava",
     "lint": "pnpm exec eslint .",
     "coverage": "pnpm run build && c8 ava",
     "format": "pnpm exec prettier --write .",
-    "dev:chat-ui": "shadow-cljs watch chat-ui",
-    "dev:docops": "shadow-cljs watch docops-frontend",
-    "dev:duck-web": "shadow-cljs watch duck-web-frontend",
-    "dev:kanban": "shadow-cljs watch kanban-frontend",
-    "dev:openai-server": "shadow-cljs watch openai-server-frontend",
-    "dev:opencode-session-manager": "shadow-cljs watch opencode-session-manager-frontend",
-    "dev:piper": "shadow-cljs watch piper-frontend",
-    "dev:report-forge": "shadow-cljs watch report-forge-frontend",
-    "dev:smartgpt-dashboard": "shadow-cljs watch smartgpt-dashboard-frontend",
     "dev:pantheon": "vite",
     "build:pantheon": "tsc && vite build",
     "preview:pantheon": "vite preview",
