--- a/packages/file-system/indexer-client/package.json
+++ b/packages/file-system/indexer-client/package.json
@@ -14,6 +14,10 @@
   "license": "ISC",
   "devDependencies": {
     "ava": "^6.0.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "vitest": "^1.0.0"
+  },
+  "dependencies": {
+    "@opencode-ai/plugin": "workspace:*"
   }
 }
