chore(package): update @opencode-ai/plugin to ^0.15.7
- ensures compatibility with latest plugin version
- aligns with dependency pinning strategy for stability

--- a/packages/file-system/indexer-client/package.json
+++ b/packages/file-system/indexer-client/package.json
@@ -18,6 +18,6 @@
     "vitest": "^1.0.0"
   },
   "dependencies": {
-    "@opencode-ai/plugin": "workspace:*"
+    "@opencode-ai/plugin": "^0.15.7"
   }
 }
