fix: update module type and import scope for unified indexer service
- change package.json type from module to commonjs for compatibility
- remove unused IndexableContent import to reduce bundle size and simplify imports

--- a/packages/ai/openai-server/package.json
+++ b/packages/ai/openai-server/package.json
@@ -2,7 +2,7 @@
   "name": "@promethean-os/openai-server",
   "version": "0.0.0",
   "private": true,
-  "type": "module",
+  "type": "commonjs",
   "license": "GPL-3.0-only",
   "main": "dist/index.js",
   "module": "dist/index.js",
