--- a/packages/ai/openai-server/package.json
+++ b/packages/ai/openai-server/package.json
@@ -2,7 +2,7 @@
   "name": "@promethean-os/openai-server",
   "version": "0.0.0",
   "private": true,
-  "type": "commonjs",
+  "type": "module",
   "license": "GPL-3.0-only",
   "main": "dist/index.js",
   "module": "dist/index.js",
