--- a/packages/agents/agent-generator/package.json
+++ b/packages/agents/agent-generator/package.json
@@ -21,7 +21,7 @@
     "build": "shadow-cljs release agent-generator",
     "clean": "rimraf dist",
     "typecheck": "tsc -p tsconfig.json --noEmit",
-    "test": "pnpm run build && ava --config ../../config/ava.config.mjs",
+    "test": "ava --config ../../config/ava.config.mjs",
     "lint": "pnpm exec eslint .",
     "coverage": "pnpm run build && c8 ava --config ../../config/ava.config.mjs",
     "format": "pnpm exec prettier --write .",
