--- a/package.json
+++ b/package.json
@@ -137,6 +137,7 @@
     "pm2": "6.0.8",
     "remark-parse": "11.0.0",
     "rimraf": "6.0.1",
+    "shadow-cljs": "^3.2.1",
     "source-map-support": "0.5.21",
     "string-argv": "^0.3.2",
     "ts-node": "10.9.2",
