remove unused dependencies from unified-indexer
- remove @promethean-os/embedding
- remove @promethean-os/legacy
- remove @promethean-os/logger
- remove @types/javascript-time-ago
- remove chromadb
- remove mongodb
- remove uuid
- remove zod
- remove @types/uuid (devDependency)

--- a/packages/unified-indexer/package.json
+++ b/packages/unified-indexer/package.json
@@ -31,17 +31,6 @@
   },
   "module": "dist/index.js",
   "dependencies": {
-    "@promethean-os/persistence": "workspace:*",
-    "@promethean-os/embedding": "workspace:*",
-    "@promethean-os/legacy": "workspace:*",
-    "@promethean-os/logger": "workspace:*",
-    "@types/javascript-time-ago": "^2.5.0",
-    "chromadb": "^3.0.14",
-    "mongodb": "^6.18.0",
-    "uuid": "^11.1.0",
-    "zod": "^3.23.8"
-  },
-  "devDependencies": {
-    "@types/uuid": "^10.0.0"
+    "@promethean-os/persistence": "workspace:*"
   }
 }
