add ava testing support and update dev dependencies
- introduce ava.config.mjs for test configuration
- add ava, sinon, and @types/sinon to devDependencies
- enable test environment with NODE_ENV=test
- configure timeout and concurrency for test runs

--- a/packages/unified-indexer/package.json
+++ b/packages/unified-indexer/package.json
@@ -32,5 +32,11 @@
   "module": "dist/index.js",
   "dependencies": {
     "@promethean-os/persistence": "workspace:*"
+  },
+  "devDependencies": {
+    "ava": "^6.1.3",
+    "sinon": "^18.0.0",
+    "@types/sinon": "^17.0.3",
+    "c8": "^9.1.0"
   }
 }
