--- a/packages/unified-indexer/package.json
+++ b/packages/unified-indexer/package.json
@@ -20,11 +20,10 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsc",
-    "build:tests": "tsc -p tsconfig.test.json",
+    "build": "tsc -p tsconfig.json",
     "clean": "rimraf dist",
     "typecheck": "tsc -p tsconfig.json --noEmit",
-    "test": "pnpm run build:tests && ava --config ../../config/ava.config.mjs",
+    "test": "pnpm run build && ava --config ../../config/ava.config.mjs",
     "lint": "pnpm exec eslint .",
     "coverage": "pnpm run build && c8 ava --config ../../config/ava.config.mjs",
     "format": "pnpm exec prettier --write ."
