--- a/packages/unified-indexer/package.json
+++ b/packages/unified-indexer/package.json
@@ -36,6 +36,7 @@
     "ava": "^6.1.3",
     "sinon": "^18.0.0",
     "@types/sinon": "^17.0.3",
-    "c8": "^9.1.0"
+    "c8": "^9.1.0",
+    "@promethean-os/test-utils": "workspace:*"
   }
 }
