fix: remove unnecessary test files from tsconfig exclude
- removed src/tests/**/* from tsconfig exclude
- keeps dualStoreFunctions.ts in exclude for build integrity
- improves build performance by reducing unnecessary file scanning

--- a/packages/persistence/tsconfig.json
+++ b/packages/persistence/tsconfig.json
@@ -7,7 +7,7 @@
         "declaration": true
     },
     "include": ["src/**/*"],
-    "exclude": ["src/dualStoreFunctions.ts", "src/tests/**/*"],
+    "exclude": ["src/dualStoreFunctions.ts"],
     "references": [
         {
             "path": "../ai/embedding"
