fix: exclude test files from persistence tsconfig
- adds src/tests/**/* to exclude list
- prevents test files from being compiled in persistence package
- improves build isolation and reduces noise in build output

--- a/packages/persistence/tsconfig.json
+++ b/packages/persistence/tsconfig.json
@@ -7,7 +7,7 @@
         "declaration": true
     },
     "include": ["src/**/*"],
-    "exclude": ["src/dualStoreFunctions.ts"],
+    "exclude": ["src/dualStoreFunctions.ts", "src/tests/**/*"],
     "references": [
         {
             "path": "../ai/embedding"
