add exclude for test files in persistence package
- prevents test files from being compiled
- improves build performance by excluding unnecessary files

--- a/packages/persistence/tsconfig.json
+++ b/packages/persistence/tsconfig.json
@@ -7,6 +7,7 @@
         "declaration": true
     },
     "include": ["src/**/*"],
+    "exclude": ["src/tests/**/*"],
     "references": [
         {
             "path": "../ai/embedding"
