fix(clean): add tsconfig.tsbuildinfo to clean command
- ensures tsconfig.tsbuildinfo is removed during clean
- prevents stale build info from persisting in project directory

--- a/packages/persistence/package.json
+++ b/packages/persistence/package.json
@@ -21,7 +21,7 @@
   ],
   "scripts": {
     "build": "tsc",
-    "clean": "rimraf dist",
+    "clean": "rimraf dist tsconfig.tsbuildinfo",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "test": "pnpm run clean && pnpm run build && ava --config ../../config/ava.config.mjs",
     "lint": "pnpm exec eslint .",
