fix coverage script: add clean step before build
- ensures no stale build artifacts affect coverage results
- improves reliability of test coverage reports
- aligns with project's build pipeline standards

--- a/packages/persistence/package.json
+++ b/packages/persistence/package.json
@@ -26,7 +26,7 @@
     "test": "pnpm run clean && pnpm run build && ava --serial --config ../../config/ava.config.mjs",
     "lint": "pnpm exec eslint .",
     "lisp": "node dist/cli/lisp.js",
-    "coverage": "pnpm run build && c8 ava --config ../../config/ava.config.mjs",
+    "coverage": "pnpm run clean && pnpm run build && c8 ava --config ../../config/ava.config.mjs",
     "format": "pnpm exec prettier --write ."
   },
   "module": "dist/index.js",
