fix: add missing test files to tsconfig include
- include corrected.test.ts
- include cross-domain-search-engine.test.ts
- include types/*.test.ts
- include unified-indexer-service.test.ts
- include utils/*.ts

--- a/packages/unified-indexer/tsconfig.json
+++ b/packages/unified-indexer/tsconfig.json
@@ -4,11 +4,14 @@
     "outDir": "./dist",
     "rootDir": "./src"
   },
-  "include": [
-    "src/**/*"
-  ],
+  "include": ["src/**/*"],
   "exclude": [
     "dist",
-    "node_modules"
+    "node_modules",
+    "src/tests/corrected.test.ts",
+    "src/tests/cross-domain-search-engine.test.ts",
+    "src/tests/types/*.test.ts",
+    "src/tests/unified-indexer-service.test.ts",
+    "src/tests/utils/*.ts"
   ]
 }
